--- a/index.html
+++ b/index.html
@@ -13,6 +13,29 @@
 </head>
 
 <body>
+    <!-- container -->
+    <div class="quote-container" id="quote-container">
+        <!-- Quote -->
+        <div class="quote-text">
+            <i class="fas fa-quote-left"></i>
+            <span id="quote"></span>
+        </div>
+        <!-- Author -->
+        <div class="quote-author">
+            <span id="author"></span>
+        </div>
+        <!-- Button -->
+        <div class="button-container">
+            <button class="twitter-button" id="twitter" title="Twitter This!">
+                <i class="fab fa-twitter"></i>
+            </button>
+            <button id="new-quote">
+                New Quote
+            </button>
+        </div>
+    </div>
+
+    <div class="loader" id="loader"></div>
 
     <script src="main.js"></script>
 </body>
